--- a/css/clinica.css
+++ b/css/clinica.css
@@ -3,7 +3,7 @@
 .custom-banner {
     width: 100%;
     min-height: 180px;
-    background-image: url(../Images/custom_clinica_banner.jpg);
+    background-image: url(../images/custom_clinica_banner.jpg);
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -577,7 +577,7 @@ h2.faq_question {
     height: 20px;
     transform: translateY(-50%);
     border: none;
-    background: url('../Images/search-submit.png') no-repeat center;
+    background: url('../images/search-submit.png') no-repeat center;
     background-size: 16px;
     cursor: pointer;
 }
